--- a/exercicios/ex026/mq002/estilos/paisagem.css
+++ b/exercicios/ex026/mq002/estilos/paisagem.css
@@ -1,7 +1,6 @@
 @charset "UTF-8";
 
-/* DISPOSITIVO DEITADO - landscape */
 body {
-    background: url('../imagens/cev-landscape.jpg');
+    background-image: url('../imagens/cev-landscape.jpg');
     background-position: left bottom;
 }
