--- a/exercicios/ex026/mq002/estilos/retrato.css
+++ b/exercicios/ex026/mq002/estilos/retrato.css
@@ -1,7 +1,6 @@
 @charset "UTF-8";
 
-/* DISPOSITIVO EM PÉ - portrait */
-
 body {
-    background: url('../imagens/cev-portrait.jpg');
+    background-image: url('../imagens/cev-portrait.jpg');
+    background-position: center bottom;
 }
